@@ -42,6 +42,7 @@ linotp (3.3~0dev-1) buster-dev; urgency=low
   * legacy selfservice qr and push token enrollment breaks with strings in otppin policy
   * More customisation in /selfservice-legacy was broken (Followup to a v3.2.3 fix)
   * drop ability to define autoassignment policy with values
+  * `/reporting/delete_before` matches realms to correct policy
 
  -- LinOTP Packaging <packaging@linotp.de>  Wed, 23 Feb 2022 08:51:51 +0100
 
